<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AnySoftKeyboard - Sakha Language Pack</string>
    <string name="keyboard_name">Сахалыы</string>
    <string name="keyboard_desc">Сахалыы толору ЙЦУКЕҤ, Windows-тыы</string>
    <string name="keyboard_rusname">Нууччалыы</string>
    <string name="keyboard_rusdesc">Нуччалыы ЙЦУКЕН, өр баттаһыннаах</string>
    <string name="keyboard_phoname">Өыэртү</string>
    <string name="keyboard_phodesc">Сахалыы ӨЫЭРТҮ(QWERTY), Кыраһалыы</string>
    <string name="keyboard_bjkname">Һөҕүҥ</string>
    <string name="keyboard_bjkdesc">Сахалыы ҺӨҔҮҤ, Бэрт Дьиктилии</string>
    <string name="dictionary_name">Sakha/Russian</string>
    <string name="dictionary_desc">Сахалыы тылдьыт с русскими словами</string>
</resources>
